to do list working

--- a/index.html
+++ b/index.html
@@ -1,23 +1,50 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <style>
+        .stuff {
+            text-decoration: line-through;
+            font-size: 20px;
+        }
+
+    </style>
 
 </head>
 
 <body>
     <ul>
-    <li>red</li>
-        <li>green</li>
-        <li>blue</li>
+        <li>school</li>
+        <li>dance</li>
+        <li>practice coding</li>
+        <li>Coffee</li>
+        <li>Sleep</li>
+        <li>shower</li>
+        <li>sleep</li>
     </ul>
 
 
     <script>
-    let myElement = document.querySelectorAll("li");
-    console.log(myElement)
+        let myElements = document.querySelectorAll("li");
+        //console.log(myElement)
+
+        myElements.forEach(addClass);
+
+        function addClass(oneLi, index) {
+            console.log(oneLi);
+            //oneLi.classList.add("stuff);
+            oneLi.addEventListener("click", listClicked);
+        }
+
+        function listClicked(evt) {
+            console.log(evt.target);
+            evt.target.classList.toggle("stuff");
+        }
+
     </script>
 </body>
+
 </html>
